--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 							<li><a href="elements.html">미정</a></li>
 							<li><a href="elements.html">미정</a></li>
 						</ul>
+					</ul>
+					<ul class="actions vertical">
+						<li><a href="#" class="button special fit">제작정보</a></li>
+					</ul>
 					</nav>
 
 				<!-- Banner -->
@@ -121,7 +125,7 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>제작정보</h2>
 									</header>
 									<p>이 웹 프로젝트는 주제별로 각각의 학생이 연구한 내용들로 구성되어있습니다. 프로젝트의 제작동기와 만든사람들에 대한 정보를 알 수 있습니다.</p>
 									<ul class="actions">
@@ -186,11 +190,24 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<!--<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>-->
+								<!-- 페이스북 공유 버튼 -->
+								<a href="" onclick="window.open(url_combine_fb, '', 'scrollbars=no, width=600, height=600'); return false;">
+								<img src="//cfile10.uf.tistory.com/image/ 23E6BF33597DDB2112AFD3" title="페이스북으로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
+								<!-- 트위터 공유 버튼 -->
+								<a href="" onclick="window.open(url_combine_tw, '', 'scrollbars=no, width=600, height=600'); return false;">
+								<img src="//cfile27.uf.tistory.com/image/ 24DCB633597DDB2110B554" title="트위터로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
+								<!-- 카카오 스토리 공유 버튼 -->
+								<a href="" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600, height=600'); return false;">
+									<img src="//cfile9.uf.tistory.com/image/ 248F2A33597DDB21106A56" title="카카오스토리로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
+									<!-- 네이버 공유 버튼 --> <a href="" onclick="window.open(url_combine_naver, '', 'scrollbars=no, width=600, height=600'); return false;">
+									<img src="//cfile27.uf.tistory.com/image/ 2356C533597DDB21169BDB" title="네이버로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
+									<!-- 밴드 공유 버튼 --> <a href="" onclick="window.open(url_combine_band, '', 'scrollbars=no, width=584, height=635'); return false;">
+									<img src="//cfile9.uf.tistory.com/image/ 275BFB33597DDB21139B99" title="밴드로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
@@ -201,6 +218,7 @@
 			</div>
 
 		<!-- Scripts -->
+		  <script src="assets/js/snsshare.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
