failed, sns erase

--- a/index.html
+++ b/index.html
@@ -190,24 +190,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<!--<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>-->
-								<!-- 페이스북 공유 버튼 -->
-								<a href="" onclick="window.open(url_combine_fb, '', 'scrollbars=no, width=600, height=600'); return false;">
-								<img src="//cfile10.uf.tistory.com/image/ 23E6BF33597DDB2112AFD3" title="페이스북으로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
-								<!-- 트위터 공유 버튼 -->
-								<a href="" onclick="window.open(url_combine_tw, '', 'scrollbars=no, width=600, height=600'); return false;">
-								<img src="//cfile27.uf.tistory.com/image/ 24DCB633597DDB2110B554" title="트위터로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
-								<!-- 카카오 스토리 공유 버튼 -->
-								<a href="" onclick="window.open(url_combine_ks, '', 'scrollbars=no, width=600, height=600'); return false;">
-									<img src="//cfile9.uf.tistory.com/image/ 248F2A33597DDB21106A56" title="카카오스토리로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
-									<!-- 네이버 공유 버튼 --> <a href="" onclick="window.open(url_combine_naver, '', 'scrollbars=no, width=600, height=600'); return false;">
-									<img src="//cfile27.uf.tistory.com/image/ 2356C533597DDB21169BDB" title="네이버로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
-									<!-- 밴드 공유 버튼 --> <a href="" onclick="window.open(url_combine_band, '', 'scrollbars=no, width=584, height=635'); return false;">
-									<img src="//cfile9.uf.tistory.com/image/ 275BFB33597DDB21139B99" title="밴드로 공유하기" class="sharebtn_custom" style="width: 32px;"></a>
+								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
@@ -218,7 +205,6 @@
 			</div>
 
 		<!-- Scripts -->
-		  <script src="assets/js/snsshare.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
