프레임 완성

--- a/H2.html
+++ b/H2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Forty by HTML5 UP</title>
+		<title>YH-함수</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,26 +20,30 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+				<header id="header" class="alt">
+					<a href="index.html" class="logo"><strong>용현중</strong> <span>수학동아리</span></a>
+					<nav>
+						<a href="#menu">Menu</a>
+					</nav>
+				</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions vertical">
-							<li><a href="#" class="button special fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
-					</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">메인화면</a></li>
+						<li><a href="D.html">닮음</a></li>
+						<li><a href="T.html">통계</a></li>
+						<li><a href="H.html">확률</a></li>
+						<li><a href="H2.html">함수</a></li>
+						<li><a href="elements.html">미정</a></li>
+						<li><a href="elemebnts.html">미정</a></li>
+					</ul>
+				</ul>
+				<ul class="actions vertical">
+					<li><a href="clubinfo.html" class="button special fit"target ="_blank">제작정보</a></li>
+				</ul>
+				</nav>
+
 
 				<!-- Main -->
 					<div id="main" class="alt">
@@ -59,74 +63,54 @@
 
 					</div>
 
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+								<!-- Contact -->
+								<section id="contact">
+									<div class="inner">
+										<section class="split">
+											<section>
+												<div class="contact-method">
+													<span class="icon alt fa-envelope"></span>
+													<h3>Email</h3>
+													<p>kmskmskmskgb@gmail.com</p>
+												</div>
+											</section>
+											<section>
+												<div class="contact-method">
+													<span class="icon alt fa-phone"></span>
+													<h3>Phone</h3>
+													<span>010-3060-9245</span>
+												</div>
+											</section>
+											<section>
+												<div class="contact-method">
+													<span class="icon alt fa-home"></span>
+													<h3>Address</h3>
+													<span>용현중학교<br />
+													인천 미추홀구 낙섬동로 16<br />
+												</div>
+											</section>
+										</section>
 									</div>
 								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+			
+							<!-- Footer -->
+								<footer id="footer">
+									<div class="inner">
+										<ul class="icons">
+											<li><a href="" class="icon alt fa-twitter"target="_blank"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.facebook.com/kmskmskmskgb/" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+											<li><a href="https://www.instagram.com/minsung0201/" class="icon alt fa-instagram"target="_blank"><span class="label">Instagram</span></a></li>
+											<li><a href="https://github.com/kms0201" class="icon alt fa-github"target="_blank"><span class="label">GitHub</span></a></li>
+											<li><a href="#" class="icon alt fa-linkedin"target="_blank"><span class="label">LinkedIn</span></a></li>
+										</ul>
+										<ul class="copyright">
+											<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+										</ul>
 									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
+								</footer>
+			
 						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
-
-			</div>
+			
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
