--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						</ul>
 					</ul>
 					<ul class="actions vertical">
-						<li><a href="#" class="button special fit">제작정보</a></li>
+						<li><a href="clubinfo.html" class="button special fit"target ="_blank">제작정보</a></li>
 					</ul>
 					</nav>
 
@@ -63,7 +63,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
+						<!-- 주제소개 -->
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
@@ -107,7 +107,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">미정</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<p>체험활동 주제설명</p>
 									</header>
 								</article>
 								<article>
@@ -116,12 +116,12 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">미정</a></h3>
-										<p>Feugiat amet tempus</p>
+										<p>체험활동 주제설명</p>
 									</header>
 								</article>
 							</section>
 
-						<!-- Two -->
+						<!-- clubinfo -->
 							<section id="two">
 								<div class="inner">
 									<header class="major">
@@ -129,7 +129,7 @@
 									</header>
 									<p>이 웹 프로젝트는 주제별로 각각의 학생이 연구한 내용들로 구성되어있습니다. 프로젝트의 제작동기와 만든사람들에 대한 정보를 알 수 있습니다.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">알아보기</a></li>
+										<li><a href="clubinfo.html" class ="button" target ="_blank">알아보기</a></a></li>
 									</ul>
 								</div>
 							</section>
@@ -139,26 +139,6 @@
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
-							<section>
-								<!--<form method="post" action="#">
-									<div class="field half first">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="special" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>-->
-							</section>
 							<section class="split">
 								<section>
 									<div class="contact-method">
@@ -171,7 +151,7 @@
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>032-885-2509</span>
+										<span>010-3060-9245</span>
 									</div>
 								</section>
 								<section>
@@ -190,11 +170,11 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="" class="icon alt fa-twitter"target="_blank"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/kmskmskmskgb/" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.instagram.com/minsung0201/" class="icon alt fa-instagram"target="_blank"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/kms0201" class="icon alt fa-github"target="_blank"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon alt fa-linkedin"target="_blank"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
