--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- 주제소개 -->
+						<!-- 주제섹션 -->
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="D.html" class="link">닮음</a></h3>
+										<h3><a href="D.html" class="link">수학으로 솔로탈출</a></h3>
 										<p>닮음을 다룹니다.</p>
 									</header>
 								</article>
@@ -79,7 +79,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="T.html" class="link">통계</a></h3>
+										<h3><a href="T.html" class="link">IQ램프 만들기</a></h3>
 										<p>통계를 다룹니다.</p>
 									</header>
 								</article>
