--- a/clubinfo.html
+++ b/clubinfo.html
@@ -25,12 +25,12 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Elements</h1>
+										<h1>제작정보</h1>
 									</header>
 
 									<!-- Content -->
-										<h2 id="content">Sample Content</h2>
-										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p>
+										<h2 id="content">용현중학교 수학동아리 : 수학이 나르샤</h2>
+										<p>용현중 수학동아리에는 총 16명의 학생들과 2분의 선생님께서 계십니다.</p>
 										<div class="row">
 											<div class="6u 12u$(small)">
 												<h3>Sem turpis amet semper</h3>
@@ -40,40 +40,99 @@
 												<h3>Magna odio tempus commodo</h3>
 												<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
 											</div>
-											<!-- Break -->
-											<div class="4u 12u$(medium)">
-												<h3>Interdum sapien gravida</h3>
-												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-											</div>
-											<div class="4u 12u$(medium)">
-												<h3>Faucibus consequat lorem</h3>
-												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-											</div>
-											<div class="4u$ 12u$(medium)">
-												<h3>Accumsan montes viverra</h3>
-												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-											</div>
 										</div>
 
 									<hr class="major" />
 
 									<!-- Elements -->
-										<h2 id="elements">Elements</h2>
+										<h2 id="elements">구성원</h2>
 										<div class="row 200%">
 											<div class="6u 12u$(medium)">
-													<h4>Definition</h4>
+												<h4>3학년</h4>
 													<dl>
-														<dt>Item1</dt>
+														<dt>동아리장 : 이정윤</dt>
 														<dd>
-															<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Lorem ipsum dolor.</p>
+														<p>한건 없지만 일단 동아리장입니다.</p>
+													</dd>
+													</dl>
+													<dl>
+														<dt>웹사이트 개발 : 김민성</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
 														</dd>
-														<dt>Item2</dt>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
 														<dd>
-															<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Lorem ipsum dolor.</p>
+															<p>한건 없지만 일단 동아리장입니다.</p>
 														</dd>
-														<dt>Item3</dt>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
 														<dd>
-															<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Lorem ipsum dolor.</p>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+												<h4>2학년</h4>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+												
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
+														</dd>
+													</dl>
+													<dl>
+														<dt>동아리장 : 이정윤</dt>
+														<dd>
+															<p>한건 없지만 일단 동아리장입니다.</p>
 														</dd>
 													</dl>
 
