세부설명, 만든사람, 등등 추가

--- a/clubinfo.html
+++ b/clubinfo.html
@@ -30,15 +30,59 @@
 
 									<!-- Content -->
 										<h2 id="content">용현중학교 수학동아리 : 수학이 나르샤</h2>
-										<p>용현중 수학동아리에는 총 16명의 학생들과 2분의 선생님께서 계십니다.</p>
+										<p>용현중 수학동아리에는 총 36명의 학생들과 2분의 선생님께서 계십니다.</p>
 										<div class="row">
 											<div class="6u 12u$(small)">
-												<h3>Sem turpis amet semper</h3>
-												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+												<h3>학생일람</h3>
+												<h4 style="color:green">3학년</h4>
+												<p>김민식
+													김민성
+													김창섭
+													김재원
+													김원휘
+													최하람
+													박상돈 
+													이규헌
+													정은교
+													<br>
+													이정윤
+													김가원</p>
+												<h4 style="color:orange">2학년</h4>
+												<p>
+													서원빈
+													김민후
+													원성현
+													박윤서
+													안호찬
+													황인욱
+													임상민
+													심현보
+													고현준
+													<br>
+													김유현
+													강민석
+													홍상우
+													강휘문
+													김건우
+													조경수</p>
+													<h4 style="color: skyblue">1학년</h4>
+													<p>
+														안세진
+														장준혁
+														나유준
+														양지웅
+														이기준
+														백시원
+														황주선
+														김민재
+														이준희
+														<br>
+														이지민
+													</p>
 											</div>
 											<div class="6u$ 12u$(small)">
-												<h3>Magna odio tempus commodo</h3>
-												<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
+												<h3>선생님</h3>
+												<h4><p>변재연선생님 <br>이미정선생님</p></h4>
 											</div>
 										</div>
 
@@ -48,38 +92,32 @@
 										<h2 id="elements">구성원</h2>
 										<div class="row 200%">
 											<div class="6u 12u$(medium)">
-												<h4>3학년</h4>
+												<h3>3학년 : IQ램프 만들기</h3>
 													<dl>
-														<dt>동아리장 : 이정윤</dt>
+														<dt>동아리장 & 영상편집 : 이정윤</dt>
 														<dd>
-														<p>한건 없지만 일단 동아리장입니다.</p>
-													</dd>
-													</dl>
-													<dl>
-														<dt>웹사이트 개발 : 김민성</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
+														<p>영상들을 편집했습니다.</p>
 														</dd>
 													</dl>
 													<dl>
-														<dt>동아리장 : 이정윤</dt>
+														<dt>이론설명 : 김창섭</dt>
 														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
+															<p>체험의 수학적 원리를 소개했습니다.</p>
 														</dd>
 													</dl>
 													<dl>
-														<dt>동아리장 : 이정윤</dt>
+														<dt>체험영상촬영 : 정은교</dt>
 														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
+															<p>체험 튜토리얼 설명을 맡았습니다. </p>
 														</dd>
 													</dl>
 													<dl>
-														<dt>동아리장 : 이정윤</dt>
+														<dt>체험영상촬영: 김재원</dt>
 														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
+															<p>체험 튜토리얼 설명을 맡았습니다.</p>
 														</dd>
 													</dl>
-												<h4>2학년</h4>
+												<h3>2학년 : 수학으로 솔로탈출</h3>
 													<dl>
 														<dt>동아리장 : 이정윤</dt>
 														<dd>
