--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
 	<body>
-
+		<script>
+			alert("수학체험 후 혼자서 만들기 어렵거나 질문이 있는 분은 20(금) 또는 25(수) 점심시간에 찾아오세요.");
+		</script>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -31,12 +33,11 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">메인화면</a></li>
-							<li><a href="D.html">닮음</a></li>
-							<li><a href="T.html">통계</a></li>
-							<li><a href="H.html">확률</a></li>
-							<li><a href="H2.html">함수</a></li>
-							<li><a href="elements.html">미정</a></li>
-							<li><a href="elements.html">미정</a></li>
+							<li><a href="D.html">수학으로 솔로탈출</a></li>
+							<li><a href="T.html">IQ퍼즐램프 만들기</a></li>
+							<li><a href="H.html">라틴방진으로 냄비받침만들기</a></li>
+							<li><a href="H2.html">수학마술</a></li>
+							<li><a href="elements.html">체험신청</a></li>
 						</ul>
 					</ul>
 					<ul class="actions vertical">
@@ -71,7 +72,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="D.html" class="link">수학으로 솔로탈출</a></h3>
-										<p>닮음을 다룹니다.</p>
+										<p>러브방정식을 지오지브라로 그려보고 아크릴 무드등까지 만들어봅니다.</p>
 									</header>
 								</article>
 								<article>
@@ -79,8 +80,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="T.html" class="link">IQ램프 만들기</a></h3>
-										<p>통계를 다룹니다.</p>
+										<h3><a href="T.html" class="link">IQ퍼즐램프 만들기</a></h3>
+										<p>IQ퍼즐램프의 수학적원리를 살펴보고 직접만들어봅니다.</p>
 									</header>
 								</article>
 								<article>
@@ -88,8 +89,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="H.html" class="link">확률</a></h3>
-										<p>확률을 다룹니다.</p>
+										<h3><a href="H.html" class="link">라틴방진으로 냄비받침만들기</a></h3>
+										<p>설명</p>
 									</header>
 								</article>
 								<article>
@@ -97,26 +98,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="H2.html" class="link">함수</a></h3>
-										<p>함수를 다룹니다.</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">미정</a></h3>
-										<p>체험활동 주제설명</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">미정</a></h3>
-										<p>체험활동 주제설명</p>
+										<h3><a href="H2.html" class="link">수학마술</a></h3>
+										<p>설명</p>
 									</header>
 								</article>
 							</section>
@@ -144,14 +127,14 @@
 									<div class="contact-method">
 										<span class="icon alt fa-envelope"></span>
 										<h3>Email</h3>
-										<p>kmskmskmskgb@gmail.com</p>
+										<p></p>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>010-3060-9245</span>
+										<span></span>
 									</div>
 								</section>
 								<section>
@@ -170,11 +153,10 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="" class="icon alt fa-twitter"target="_blank"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/1Pu0rT37dafO5Lx" class="icon alt fa-twitter"target="_blank"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/kmskmskmskgb/" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.instagram.com/minsung0201/" class="icon alt fa-instagram"target="_blank"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/kms0201" class="icon alt fa-github"target="_blank"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"target="_blank"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.instagram.com/minsung_521/" class="icon alt fa-instagram"target="_blank"><span class="label">Instagram</span></a></li>
+								<li><a href="https://github.com/minsung-dev" class="icon alt fa-github"target="_blank"><span class="label">GitHub</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
@@ -192,6 +174,4 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
-
-	</body>
 </html>
