--- a/clubinfo.html
+++ b/clubinfo.html
@@ -119,61 +119,27 @@
 													</dl>
 												<h3>2학년 : 수학으로 솔로탈출</h3>
 													<dl>
-														<dt>동아리장 : 이정윤</dt>
+														<dt>직책 : 이름</dt>
 														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
-														</dd>
-													</dl>
-												
-													<dl>
-														<dt>동아리장 : 이정윤</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>동아리장 : 이정윤</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>동아리장 : 이정윤</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>동아리장 : 이정윤</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>동아리장 : 이정윤</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>동아리장 : 이정윤</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>동아리장 : 이정윤</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>동아리장 : 이정윤</dt>
-														<dd>
-															<p>한건 없지만 일단 동아리장입니다.</p>
+															<p>설명</p>
 														</dd>
 													</dl>
 
+													<footer id="footer">
+														<div class="inner">
+															<ul class="icons">
+																<li><a href="" class="icon alt fa-twitter"target="_blank"><span class="label">Twitter</span></a></li>
+																<li><a href="https://www.facebook.com/kmskmskmskgb/" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+																<li><a href="https://www.instagram.com/minsung0201/" class="icon alt fa-instagram"target="_blank"><span class="label">Instagram</span></a></li>
+																<li><a href="https://github.com/kms0201" class="icon alt fa-github"target="_blank"><span class="label">GitHub</span></a></li>
+																<li><a href="#" class="icon alt fa-linkedin"target="_blank"><span class="label">LinkedIn</span></a></li>
+															</ul>
+															<ul class="copyright">
+																<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+															</ul>
+														</div>
+													</footer>
+									
 								</div>
 			
 		<!-- Scripts -->
