--- a/H.html
+++ b/H.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>YH-확률</title>
+		<title>라틴방진으로 냄비받침만들기</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -64,7 +64,7 @@
 					</div>
 
 								<!-- Contact -->
-								<section id="contact">
+								<!-- <section id="contact">
 									<div class="inner">
 										<section class="split">
 											<section>
@@ -91,7 +91,7 @@
 											</section>
 										</section>
 									</div>
-								</section>
+								</section> -->
 			
 							<!-- Footer -->
 								<footer id="footer">
