youtube video embed

--- a/D.html
+++ b/D.html
@@ -32,12 +32,11 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">메인화면</a></li>
-						<li><a href="D.html">닮음</a></li>
-						<li><a href="T.html">통계</a></li>
-						<li><a href="H.html">확률</a></li>
-						<li><a href="H2.html">함수</a></li>
-						<li><a href="elements.html">미정</a></li>
-						<li><a href="elemebnts.html">미정</a></li>
+							<li><a href="D.html">수학으로 솔로탈출</a></li>
+							<li><a href="T.html">IQ퍼즐램프 만들기</a></li>
+							<li><a href="H.html">라틴방진으로 냄비받침만들기</a></li>
+							<li><a href="H2.html">수학마술</a></li>
+							<li><a href="elements.html">체험신청</a></li>
 					</ul>
 				</ul>
 				<ul class="actions vertical">
