--- a/T.html
+++ b/T.html
@@ -31,12 +31,11 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">메인화면</a></li>
-						<li><a href="D.html">닮음</a></li>
-						<li><a href="T.html">통계</a></li>
-						<li><a href="H.html">확률</a></li>
-						<li><a href="H2.html">함수</a></li>
-						<li><a href="elements.html">미정</a></li>
-						<li><a href="elemebnts.html">미정</a></li>
+							<li><a href="D.html">수학으로 솔로탈출</a></li>
+							<li><a href="T.html">IQ퍼즐램프 만들기</a></li>
+							<li><a href="H.html">라틴방진으로 냄비받침만들기</a></li>
+							<li><a href="H2.html">수학마술</a></li>
+							<li><a href="elements.html">체험신청</a></li>
 					</ul>
 				</ul>
 				<ul class="actions vertical">
@@ -52,12 +51,10 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>IQ퍼즐램프 만들기</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<p align="middle"><iframe width="853" height="480" style="text-align: center;" src="https://www.youtube.com/embed/L4aUACZXCuk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+									<p>이론 설명, 이미지</p>
 								</div>
 							</section>
 
