--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<script>
-			alert("수학체험 후 혼자서 만들기 어렵거나 질문이 있는 분은 20(금) 또는 25(수) 점심시간에 찾아오세요.");
+			alert("수학체험 결과물을 2층 교무실 변재연선생님께 가져오는 사람에게는 소정의 선물을 드립니다.");
 		</script>
 		<!-- Wrapper -->
 			<div id="wrapper">
