--- a/D.html
+++ b/D.html
@@ -52,12 +52,10 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>DEMO1</h1>
+										<h1>수학으로 솔로탈출 - 러브방정식</h1>
 									</header>
-									<iframe width="853" height="480" src="https://www.youtube.com/embed/td2Hq5Ezk6g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									<iframe width="711" height="400" src="https://www.youtube.com/embed/7bO0TmJ6Ba4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									<p>삼각형의 닮음 조건 - 증명</br> 설명(글),그림,그래프(타 웹사이트 인용가능) 등 다양한 자료 삽입 가능하므로 분담한 파트 디자인 구상 바람.+페이지 넘김효과 구현가능</p>	
-									<p>출처 : <a href="https://ko.khanacademy.org/math/algebra-basics/alg-basics-equations-and-geometry/alg-basics-intro-to-triangle-similarity/v/similarity-postulates" target="_blank">칸 아카데미</a></p>
+									<h3>체험영상</h3>
+									<p align="middle"><iframe width="853" height="480" src="https://www.youtube.com/embed/b5VLqQKSYdI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 								</div>
 							</section>
 
