--- a/clubinfo.html
+++ b/clubinfo.html
@@ -92,39 +92,73 @@
 										<h2 id="elements">구성원</h2>
 										<div class="row 200%">
 											<div class="6u 12u$(medium)">
-												<h3>3학년 : IQ램프 만들기</h3>
-													<dl>
-														<dt>동아리장 & 영상편집 : 이정윤</dt>
-														<dd>
-														<p>영상들을 편집했습니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>이론설명 : 김창섭</dt>
-														<dd>
-															<p>체험의 수학적 원리를 소개했습니다.</p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>체험영상촬영 : 정은교</dt>
-														<dd>
-															<p>체험 튜토리얼 설명을 맡았습니다. </p>
-														</dd>
-													</dl>
-													<dl>
-														<dt>체험영상촬영: 김재원</dt>
-														<dd>
-															<p>체험 튜토리얼 설명을 맡았습니다.</p>
-														</dd>
-													</dl>
+												<h3 style="color: green;">3학년 : IQ램프 만들기</h3>
+													<div style="margin-left:30px">
+														<dl>
+															<dt>동아리장 & 영상편집 : 이정윤</dt>
+															<dd>
+															<p>영상들을 편집했습니다.</p>
+															</dd>
+														</dl>
+														<dl>
+															<dt>이론설명 : 김창섭</dt>
+															<dd>
+																<p>체험의 수학적 원리를 소개했습니다.</p>
+															</dd>
+														</dl>
+														<dl>
+															<dt>웹개발 : 김민성</dt>
+															<dd>
+																<p>용현중 수학체험 사이트를 개발했습니다.</p>
+															</dd>
+														</dl>
+														<dl>
+															<dt>체험영상촬영 : 정은교</dt>
+															<dd>
+																<p>체험 튜토리얼 설명을 맡았습니다. </p>
+															</dd>
+														</dl>
+														<dl>
+															<dt>체험영상촬영: 김재원</dt>
+															<dd>
+																<p>체험 튜토리얼 설명을 맡았습니다.</p>
+															</dd>
+														</dl>
+													</div>
+												<h3 style="color: orange;">2학년 : 수학마술</h3>
+												<div style="margin-left: 30px;"><dl>
+													<dt>대본 : 강민석</dt>
+													<dd>
+														<p>대본을 작성했습니다.</p>
+													</dd>
+												</dl>
+												<dl>
+													<dt>PPT : 조경수</dt>
+													<dd>
+														<p>PPT를 만들었습니다.</p>
+													</dd>
+												</dl>
+												<dl>
+													<dt>영상편집 : 황인욱</dt>
+													<dd>
+														<p>촬영한 영상을 편집했습니다.</p>
+													</dd>
+												</dl>
+												<dl>
+													<dt>영상 출연 : 김건우</dt>
+													<dd>
+														<p>마술사 역할로 영상에 출연했습니다.</p>
+													</dd>
+												</dl>
+												<dl>
+													<dt>영상 출연 : 홍상우</dt>
+													<dd>
+														<p>소개자 역할로 영상에 출연했습니다.</p>
+													</dd>
+												</dl>
+											</div>													
 												<h3>2학년 : 수학으로 솔로탈출</h3>
-													<dl>
-														<dt>직책 : 이름</dt>
-														<dd>
-															<p>설명</p>
-														</dd>
-													</dl>
-
+												<h3>2학년 : 라틴방진으로 냄비받침만들기</h3>
 													<footer id="footer">
 														<div class="inner">
 															<ul class="icons">
