--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<script>
-			alert("수학체험 결과물을 2층 교무실 변재연선생님께 가져오는 사람에게는 소정의 선물을 드립니다.");
+			alert("수학체험 결과물을 2층 교무실 변재연선생님께 가져오는 학생에게는 소정의 선물을 드립니다.");
 		</script>
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -90,7 +90,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="H.html" class="link">라틴방진으로 냄비받침만들기</a></h3>
-										<p>설명</p>
+										<p>라틴방진의 원리가 적용된 냄비받침을 만들어봅니다.</p>
 									</header>
 								</article>
 								<article>
@@ -99,7 +99,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="H2.html" class="link">수학마술</a></h3>
-										<p>설명</p>
+										<p>여러 수학문제들의 원리를 이해합니다.</p>
 									</header>
 								</article>
 							</section>
