dev information is added

--- a/H2.html
+++ b/H2.html
@@ -94,10 +94,10 @@
 								<footer id="footer">
 									<div class="inner">
 										<ul class="icons">
-											<li><a href="" class="icon alt fa-twitter"target="_blank"><span class="label">Twitter</span></a></li>
+											<li><a href="https://twitter.com/1Pu0rT37dafO5Lx" class="icon alt fa-twitter"target="_blank"><span class="label">Twitter</span></a></li>
 											<li><a href="https://www.facebook.com/kmskmskmskgb/" class="icon alt fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
-											<li><a href="https://www.instagram.com/minsung0201/" class="icon alt fa-instagram"target="_blank"><span class="label">Instagram</span></a></li>
-											<li><a href="https://github.com/kms0201" class="icon alt fa-github"target="_blank"><span class="label">GitHub</span></a></li>
+											<li><a href="https://www.instagram.com/minsung_521/" class="icon alt fa-instagram"target="_blank"><span class="label">Instagram</span></a></li>
+											<li><a href="https://github.com/minsung-dev" class="icon alt fa-github"target="_blank"><span class="label">GitHub</span></a></li>
 											<li><a href="#" class="icon alt fa-linkedin"target="_blank"><span class="label">LinkedIn</span></a></li>
 										</ul>
 										<ul class="copyright">
